# roboy_interface

./: CMakeLists.txt  package.xml
include/interface/: PaBiRoboy_inverse_kinematics.hpp  main_window.hpp
include/roboy_interface/: json.hpp  main_window.hpp
launch/: PaBi_dance.launch
src/: PaBiRoboy_inverse_kinematics.cpp  main.cpp  main_window.cpp
ui/: main_window.ui
